2025-06-22  Zhengyi Fu  <i@fuzy.me>

	* init.el (elfeed-db): Require filenotify.

2025-06-21  Zhengyi Fu  <i@fuzy.me>

	* init.el (elfeed-db): New function.  Reload feeds.eld on change.

2025-06-20  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-feeds-inhibit-save): Remove variable.
	(+elfeed-feeds-save): Remove function.

2025-06-20  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-browse-eww): New command.  Assigned to "e" in
	`elfeed-show-mode-map'.

2025-06-20  Zhengyi Fu  <i@fuzy.me>

	Update gptel configuration

	* site-lisp/gptel-config.el (+gptel-search-emacs-lists): New function.
	(+gptel-url-retrieve): New function.

2025-06-20  Zhengyi Fu  <i@fuzy.me>

	Minor update to gptel configuration

	* site-lisp/gptel-config.el (+gptel-edit-file): Renamed from
	`my-gptel--edit_file'.  All calls changed.
	(+gptel-review-pullreq): Add &rest _ args.
	(+gptel-review-pullreq): Add a star to the end of the buffer name.

2025-06-19  Zhengyi Fu  <i@fuzy.me>

	* init.el (elfeed-show-tag): Use `elfeed-db-get-all-tags' instead
	of the tags history as the completion table.

2025-06-19  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Kill unused buffers.
	(+gptel-request-changes): Better error handling.

2025-06-19  Zhengyi Fu  <i@fuzy.me>

	Add a command to review PRs automatically with LLM

	* site-lisp/gptel-config.el (+gptel-review-pullreq): New command.

2025-06-19  Zhengyi Fu  <i@fuzy.me>

	* init.el (elfeed-show-tag): Fix calculation of the tags
	completion tags.

2025-06-19  Zhengyi Fu  <i@fuzy.me>

	Update gptel configuration

	* site-lisp/gptel-config.el (my-gptel--edit_file): Use `when-let*'
	to avoid warnings.
	(my-gptel--edit_file): Save the buffer after user accepts the change.
	(gptel-backend):  Do not set it here.
	(+gptel-auto-scroll-safe): New function.  Added to
	`gptel-post-stream-hook'.
	* site-lisp/gptel-config.el: Add new tools: get_pullreq,
	approve_pullreq, request_changes, get_jira_issue,
	create_jira_issue, comment_jira_issue, transition_jira_issue,