@@ -1,5 +1,12 @@
 2025-06-22  Zhengyi Fu  <i@fuzy.me>
 
+	Add elfeed-web
+
+	* packages.el (web-server, elfeed-web): New packages.
+	(straight-host-usernames): Update default usernames.
+
+2025-06-22  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el (elfeed-db): Require filenotify.
 
 2025-06-21  Zhengyi Fu  <i@fuzy.me>
